...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your UID"
            android:textSize="35dp" />

        <TextView
            android:id="@+id/YourUIDDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="U123456789"
            android:textSize="35dp" />

        <TextView
...
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="Friend's UID"
            android:textSize="35dp" />

        <EditText
            android:id="@+id/FriendsUIDEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Friend's UID"
            android:inputType="text"
            android:minHeight="48dp" />

    </LinearLayout>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"
        android:text="Submit"/>

</LinearLayout>

