<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center_horizontal"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/RegTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Registration"
            android:textSize="60dp" />

        <TextView
            android:id="@+id/UsernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="148dp"
            android:text="Name"
            android:textSize="35dp" />

        <EditText
            android:id="@+id/UsernameEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:inputType="text" />

    </LinearLayout>

    <Button
        android:id="@+id/UID_generator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"
        android:onClick="generateUID"
        android:text="Generate UID" />
</LinearLayout>