...
            android:layout_marginTop="20dp"
            android:textSize="35dp" />

    </LinearLayout>

    <Button
        android:id="@+id/GoToCompass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"
        android:text="Go to Compass" />

</LinearLayout>
