...
            android:layout_gravity="end|center_vertical"
            android:gravity="center"/>

    </LinearLayout>

    <Button
        android:id="@+id/addLoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="Add Friend"
        android:onClick="addFriend" />
    <TextView
        android:id="@+id/GreenDot"
        android:layout_width="71dp"
        android:layout_height="98dp"
        android:text="\u2022"
...
